--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "node-sass": "4.14.1",
+    "v-click-outside": "^3.1.2",
     "vue": "^2.6.11"
   },
   "devDependencies": {
